--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # Replace the text below to customize your site
-site_name: francesco hi - MDEF & Fab Lab Barcelona
+site_name: Francesco Mignogna - MDEF & Fab Lab Barcelona
 site_description: Master in Design for Emergent Futures
-site_author: Student Name
+site_author: Francesco Mignogna
 copyright: Copyleft 2023 "Student Name" - GNU Free Documentation License
 repo_name: 'Name : Github Repo'
 site_url: https://fablabbcn.github.io/mdef-template/
