--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ theme:
   name: material
   palette:
     # try other colors https://squidfunk.github.io/mkdocs-material/getting-started/#primary-colors
+    scheme: slate
     primary: purple
     accent: purple
   font:
