--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,20 +7,30 @@ repo_name: 'Name : Github Repo'
 site_url: https://fablabbcn.github.io/mdef-template/
 repo_url: 'https://github.com/fablabbcn/mdef-template'
 
+nav: {
+  position: fixed;      /* resta fisso sulla pagina */
+  bottom: 20px;         /* distanza dal fondo */
+  left: 50%;            /* centro orizzontale */
+  transform: translateX(-50%); /* centra perfettamente */
+  background-color: rgba(75, 0, 130, 0.9); /* purple semi-trasparente */
+  padding: 10px 20px;
+  border-radius: 12px;
+  display: flex;
+  gap: 20px;            /* distanza tra i link */
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
 
-nav:
-  - Home: index.md
-  - About: about/me.md
-  - Master project:
-      - Initial ideas: project/project.md
-  - Reflections :
-      - Term 1:
-          - Bootcamp: term1/01-Bootcamp.md
-          - AoWS: term1/02-Atlas of Weak Signals.md
+nav: a {
+  color: #ffffff;       /* colore dei link */
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.1em;
+  transition: color 0.3s;
+}
 
-      - Term 2:
-          - digi: term1/01-Bootcamp.md
-          - studio: term1/01-Bootcamp.md
+nav: a:hover {
+  color: #ffccff;       /* colore hover leggero */
+}
 
 
 
