--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ repo_name: 'Name : Github Repo'
 site_url: https://fablabbcn.github.io/mdef-template/
 repo_url: 'https://github.com/fablabbcn/mdef-template'
 
-nav: {
+nav {
   position: fixed;      /* resta fisso sulla pagina */
   bottom: 20px;         /* distanza dal fondo */
   left: 50%;            /* centro orizzontale */
@@ -20,7 +20,7 @@ nav: {
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
 }
 
-nav: a {
+nav a {
   color: #ffffff;       /* colore dei link */
   text-decoration: none;
   font-weight: bold;
@@ -28,7 +28,7 @@ nav: a {
   transition: color 0.3s;
 }
 
-nav: a:hover {
+nav a:hover {
   color: #ffccff;       /* colore hover leggero */
 }
 
