Update logo in mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ theme:
     text: Be Vietnam
     code: Cutive Mono
   icon:
-    logo: material/memory
+    logo: ![images](https://github.com/user-attachments/assets/1c944150-c625-44d5-a6c4-d5d06a2082f6)
   favicon: images/favicon.svg
   features:
     - instant
