--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,8 @@ theme:
     text: Be Vietnam
     code: Cutive Mono
   icon:
-    logo: ![images](https://github.com/user-attachments/assets/1c944150-c625-44d5-a6c4-d5d06a2082f6)
+    logo:theme:
+  logo: assets/logo.png
   favicon: images/favicon.svg
   features:
     - instant
