--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ markdown_extensions:
   - pymdownx.tabbed
 
 extra_css:
-  homepage: https://mig-sketch.github.io/lavezzi-mdef/
+  - hompage : https://mig-sketch.github.io/lavezzi-mdef/
   - stylesheets/extra.css
   - https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css
+
