--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ theme:
   palette:
     - scheme: slate
       primary: "blue-grey"
-      accent: "lime"
+      accent:
   font:
     text: "Be Vietnam"
     code: "Cutive Mono"
