--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,14 +13,17 @@ nav:
   - About: about/me.md
   - Master project:
       - Initial ideas: project/project.md
-  - Reflections:
+  - Term 1:
       - Term 1:
           - Bootcamp: term1/01-Bootcamp.md
           - AoWS: term1/02-Atlas of Weak Signals.md
-      - Term 2:
+      - term 1:
+          - digi: term1/01-design studio 0.md
+          - studio: term1/01-Bootcamp.md
+      -  term 2:
           - digi: term1/01-Bootcamp.md
           - studio: term1/01-Bootcamp.md
-
+          
 # Extra
 extra:
   homepage: "https://mig-sketch.github.io/lavezzi-mdef/"
