--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,12 +15,9 @@ nav:
       - Initial ideas: project/project.md
   - Term 1:
       - Term 1:
-          - Bootcamp: term1/01-Bootcamp.md
+          - Design studio 0: term1/01-Design studio 0.md
           - AoWS: term1/02-Atlas of Weak Signals.md
-      - term 1:
-          - digi: term1/01-design studio 0.md
-          - studio: term1/01-Bootcamp.md
-  - Term 2:
+  
           - digi: term1/01-Bootcamp.md
           - studio: term1/01-Bootcamp.md
           
