--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,8 @@ nav:
   
           - digi: term1/01-Bootcamp.md
           - studio: term1/01-Bootcamp.md
+  - Term 2:
+  
           
 # Extra
 extra:
