--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,8 @@ nav:
   
           - digi: term1/01-Bootcamp.md
           - studio: term1/01-Bootcamp.md
-  - Term 2:
+   - Term 2:
+      - imfwioemf: 
   
           
 # Extra
