--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
       - Term 1:
           - Design studio 0: term1/01-Design studio 0.md
           - AoWS: term1/02-Atlas of Weak Signals.md
+  - Term 2: 
   
   
           
