--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,10 +12,12 @@ nav:
   - Home: index.md
   - About: about/me.md
   - Term 1:
-      - Term 1:
           - Design studio 0: term1/01-Design studio 0.md
           - AoWS: term1/02-Atlas of Weak Signals.md
-  - Term 2:
+ - Term 2:
+      - Design studio 1: term2/01-Design studio 1.md
+      - AoWS 2: term2/02-Atlas of Weak Signals.md
+
 
   
   
