--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,10 @@ nav:
   - Term 1:
       - Design studio 01: term1/01-Design studio 01.md
       - AoWS: term1/02-Atlas of Weak Signals.md
+      - Narratives - Digital Gardening: term1/03-Narratives - Digital Gardening.md
+      - Fundamental for Future Makers: term1/04-Fundamental for Future Makers.md
+      -Reflections 1 - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
+
   - Term 2:
       - Design studio 1: term2/01-Design studio 1.md
       - AoWS 2: term2/02-Atlas of Weak Signals.md
