--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,8 @@ nav:
       -Reflections 1 - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
 
   - Term 2:
-      - Design studio 1: term2/01-Design studio 1.md
-      - AoWS 2: term2/02-Atlas of Weak Signals.md
+      - Design studio: term2/01-per i posteri.md
+      
 
 # ===============================
 # EXTRA
