--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,12 +18,12 @@ nav:
   - Term 1:
       - Design studio 01: term1/01-Design studio 01.md
       - AoWS: term1/02-Atlas of Weak Signals.md
-      - Narratives - Digital Gardening: term1/Narratives - Digital Gardening.md
-      - Fundamental for Future Makers: term1/Fundamental for Future Makers.md
-      - Reflections 1 - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
+      - Narratives - Digital Gardening: term1/Narratives - Digital Gardening
+      - Fundamental for Future Makers: term1/Fundamental for Future Makers
+      - Reflections 1 - Living with your own ideas: term1/Reflections 1 - Living with your own ideas
 
   - Term 2:
-      - Design studio: term2/per i posteri.md
+      - Design studio: term2/per i posteri
       
 
 # ===============================
