--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ nav:
       - Design studio 01: term1/01-Design studio 01.md
       - Narratives - Digital Gardening: term1/Narratives - Digital Gardening.md
       - Fundamental for Future Makers: term1/Fundamental for Future Makers.md
-      - Reflections 1 - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
+      - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
 
   - Term 2:
       - Design studio: term2/per i posteri.md
