--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,8 @@ nav:
       - Narratives - Digital Gardening: term1/Narratives - Digital Gardening.md
       - Fundamental for Future Makers: term1/Fundamental for Future Makers.md
       - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
+      - The machine paradox: term1/The machine paradox.md
+      
 
   - Term 2:
       - Design studio: term2/per i posteri.md
