Rename 'The machine paradox' to 'unpacking tech systems & the machine paradox'

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
       - Narratives - Digital Gardening: term1/Narratives - Digital Gardening.md
       - Fundamental for Future Makers: term1/Fundamental for Future Makers.md
       - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
-      - The machine paradox: term1/The machine paradox.md
+      - unpacking tech systems & the machine paradox: term1/unpacking tech systems & the machine paradox.md
     
       
 
