Add 'Atlas of Weak Signal' to Term 1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
       - Fundamental for Future Makers: term1/Fundamental for Future Makers.md
       - Living with your own ideas: term1/Reflections 1 - Living with your own ideas.md
       - unpacking tech systems & the machine paradox: term1/unpacking tech systems & the machine paradox.md
+      - Atlas of Weak Signal: term1/Atlas of Weak Signal.md
     
       
 
