--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
       
 
   - Term 2:
-      - Design studio: term2/per i posteri.md
+      - Extended Intelligences: term2/Extended Intelligences.md
       
 
 # ===============================
