--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
 
   - Term 2:
       - Extended Intelligences: term2/Extended Intelligences.md
-      
+      - Cognitive Orgies: term2/Cognitive Orgies.md
 
 # ===============================
 # EXTRA
