Add 'Narratives' section to mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
   - Term 2:
       - Extended Intelligences: term2/Extended Intelligences.md
       - Cognitive Orgies: term2/Cognitive Orgies.md
+      - Narratives: term2/Narratives.md
 
 # ===============================
 # EXTRA
